// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation.addChat creates a new chat between current user and specified recipient 1`] = `
Object {
  "addChat": Object {
    "name": "Bryan Wallace",
    "participants": Array [
      Object {
        "id": "222222222222222222222222",
      },
      Object {
        "id": "333333333333333333333333",
      },
    ],
  },
}
`;

exports[`Mutation.addChat creates a new chat between current user and specified recipient 2`] = `
Object {
  "chat": Object {
    "name": "Bryan Wallace",
    "participants": Array [
      Object {
        "id": "222222222222222222222222",
      },
      Object {
        "id": "333333333333333333333333",
      },
    ],
  },
}
`;

exports[`Mutation.addChat returns the existing chat if so 1`] = `
Object {
  "addChat": Object {
    "name": "Ethan Gonzalez",
    "participants": Array [
      Object {
        "id": "111111111111111111111111",
      },
      Object {
        "id": "222222222222222222222222",
      },
    ],
  },
}
`;
